2004-01-15  David N. Welton  <davidw@dedasys.com>

	* rivet/rivet-tcl/load_response.tcl (load_response): Fixed a bug
	in load_response that was tickled by calling it multiple times.
	Thanks to Brad for catching it.

2004-01-15  Brad Morrison  <brad@sc.com>

	* rivet/rivet-tcl/load_response.tcl: Changed behavior from
	appending discovered values to existing elements in the
	response array to simple assignment.

2004-01-15  David N. Welton  <davidw@dedasys.com>

	* rivet/packages/simpledb/simpledb.tcl (simpledb::synctostorage):
	Added fix from Massimo Manghi <manghi@biol.unipr.it> for bug in
	procedure to write database to disk.

	* rivet/packages/simpledb/simpledb.test (populatetables):
	Commented out stuff to add into the test later.

2004-01-08  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Added warning to default make.tcl target in order
	to encourage people to run ./make.tcl install.

2004-01-08  Karl Lehenbauer  <karl@sc.com>

	*  src/buildscripts/findapxs.tcl: When the apxs program cannot
	be located, the message now mentions that the location of apxs
	can also be specified using the "-with-apxs" option on the
	command line.

2004-01-05  Karl Lehenbauer  <karl@sc.com>

	*  rivet/packages/session/*: Checkin of session management code.
	This is a from-scratch rewrite of Superconnect's session
	management code, donated to Rivet under the terms of the
	Apache Software License. See rivet/packages/session/README.txt 
	for details of what it does and how it works.

2004-01-02  Karl Lehenbauer  <karl@sc.com>

	*  src/buildscripts/findapxs.tcl: Added /usr/local/bin and
	/usr/local/sbin to the directories that Rivet configuration
	looks in to find apxs, when the path to apxs wasn't specified
	on the configure command line.

	Changed findapxs::FindAPXS to generate an error if it couldn't 
	find a working apxs utility, rather than just returning an empty 
	string.  Previously if apxs could not be found, the error message 